[metadata]
name = subway task
description = Subway Task
author = Fabián Vega
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9


[options]
packages = src/subway_task
python_requires = >=3.8
packages_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    black>=21.9b0
    mypy>=0.782
    pytest>=6.2.5
    pytest-cov>=3.0.0

[options.package_data]
slapping = py.typed
